Replace slime worlds with BlurpWorld snapshots